--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,7 @@
-# dependencies
-/node_modules
+.DS_Store
+.idea
+*.log
+tmp/
 
-# production
-/build
-
-# .env
-.git-2
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-package-lock.json
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-yarn.lock
-
+node_modules/
+dist/
