--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "mr-tradly",
+  "name": "xcfpay-gateway",
   "version": "1.0.0",
   "private": true,
+  "author": "Miko Nieminen <miko.nieminen@iki.fi>",
+  "license": "ICS",
+  "main": "dist/index.js",
   "engines": {
-    "node": "^17.0.0",
-    "npm": "^8.11.0"
+    "node": ">=16.13.0 <=18"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "build": "tsc",
+    "ganache": "ganache --chain.hardfork muirGlacier --chain.chainId 888",
+    "dev": "nodemon src/index.ts",
+    "sign-tx": "ts-node tools/sign-tx.ts",
+    "start": "node dist/index.js"
   },
-  "author": "ninjacoolers",
-  "license": "ISC",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3",
-    "axios": "^0.27.2",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.0",
-    "ecpair": "^2.1.0",
-    "express": "~4.16.1",
-    "express-session": "^1.17.2",
-    "http-errors": "~1.6.3",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "moment-range": "^4.0.2",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.8",
+    "body-parser": "^1.20.0",
+    "commander": "^9.4.1",
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
+    "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "moment": "^2.29.4",
+    "stripe": "^10.15.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.2",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "ganache": "^7.4.4",
     "nodemon": "^2.0.20",
-    "pm2": "^5.2.0",
-    "stripe": "^8.203.0",
-    "tiny-secp256k1": "^2.2.1",
-    "util.promisify": "^1.1.1",
-    "uuid": "^9.0.0",
-    "web3": "^1.8.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
